# protocol-offer-hub

./: .gitignore  LICENSE  PRODUCT_DESCRIPTION.md  README.md
app/web/: README.md  env.example  package.json  tailwind.config.js
app/web/src/components/: .gitkeep  Button.tsx  ErrorAlert.tsx  Header.tsx  Layout.tsx  LoadingSpinner.tsx  WalletButton.tsx  profile-connection-guard.tsx  profile-guard.tsx
app/web/src/config/: contract.ts
app/web/src/context/: WalletContext.tsx
app/web/src/data/: mock-profiles.ts
app/web/src/hooks/: .gitkeep  use-add-claim.ts  (+19 more)
contracts/offer-hub/: Cargo.toml  Makefile  README.md
contracts/offer-hub/src/: auth.rs  contract.rs  errors.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/offer-hub/test_snapshots/test/: test_add_claim_success.1.json  test_add_multiple_claims.1.json  test_approve_claim_success.1.json  test_approve_claim_twice_fails.1.json  test_approve_rejected_claim_fails.1.json  test_full_workflow.1.json  test_get_issuer_claims.1.json  test_get_total_claims.1.json  test_get_user_claims.1.json  test_link_did_success.1.json  test_link_invalid_did_fails.1.json  test_multiple_issuers_multiple_receivers.1.json  test_register_multiple_profiles.1.json  test_register_profile_success.1.json  test_reject_approved_claim_fails.1.json  test_reject_claim_success.1.json  test_unauthorized_approval_fails.1.json  test_update_did.1.json
docs/: CONTRACTS.md  CONTRACT_API.md  FRONTEND_EXAMPLES.md  README.md
sdk/js/: README.md  jest.config.cjs  jest.setup.cjs  package.json  tsconfig.json
sdk/js/src/: client.ts  types.ts
(+46 files in other folders)
