[package]
name = "offer-hub"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "23.2.1"

[dev-dependencies]
soroban-sdk = { version = "23.2.1", features = ["testutils"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
